--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "^0.21.0",
-    "zod": "^4.3.6"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
