The plus and microphone buttons in the chat are now fully functional for sending images and recording voice.

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@rork-ai/toolkit-sdk": "^0.2.51",
     "@tanstack/react-query": "^5.83.0",
     "expo": "~54.0.27",
+    "expo-av": "~16.0.8",
     "expo-haptics": "~15.0.8",
+    "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.10",
     "expo-router": "~6.0.17",
     "expo-splash-screen": "~31.0.12",
