--- a/app.json
+++ b/app.json
@@ -15,7 +15,10 @@
     },
     "ios": {
       "supportsTablet": false,
-      "bundleIdentifier": "app.rork.smart-ai-assistant-slxh0fb"
+      "bundleIdentifier": "app.rork.smart-ai-assistant-slxh0fb",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -39,6 +42,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": "https://rork.com/"
+      },
+      "eas": {
+        "projectId": "fbf2d612-8c64-4b4c-9866-76c27abb4a0a"
+      }
     }
   }
 }
