--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "bunx rork start -p w8upxw4a5i94a9gcscv7t --tunnel",
     "start-web": "bunx rork start -p w8upxw4a5i94a9gcscv7t --web --tunnel",
     "start-web-dev": "DEBUG=expo* bunx rork start -p w8upxw4a5i94a9gcscv7t --web --tunnel",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "android": "expo run:android",
+    "ios": "expo run:ios"
   },
   "dependencies": {
     "@nkzw/create-context-hook": "^1.1.0",
@@ -15,6 +17,7 @@
     "@tanstack/react-query": "^5.83.0",
     "expo": "~54.0.27",
     "expo-av": "~16.0.8",
+    "expo-dev-client": "~6.0.20",
     "expo-haptics": "~15.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.10",
