--- a/app.json
+++ b/app.json
@@ -37,6 +37,12 @@
           "origin": "https://rork.com/"
         }
       ],
+      [
+        "expo-dev-client",
+        {
+          "launchMode": "most-recent"
+        }
+      ],
       "expo-font",
       "expo-web-browser"
     ],
