--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
-    "start-web": "expo start --web",
-    "start-web-dev": "DEBUG=expo* expo start --web",
-    "lint": "expo lint",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "start-tunnel": "expo start --dev-client --tunnel",
-    "start-go": "expo start",
-    "build:dev:ios": "eas build --profile development --platform ios",
-    "build:dev:android": "eas build --profile development --platform android"
+    "start": "node ./node_modules/expo/bin/cli start --dev-client",
+    "start-web": "node ./node_modules/expo/bin/cli start --web",
+    "start-web-dev": "DEBUG=expo* node ./node_modules/expo/bin/cli start --web",
+    "lint": "node ./node_modules/expo/bin/cli lint",
+    "android": "node ./node_modules/expo/bin/cli run:android",
+    "ios": "node ./node_modules/expo/bin/cli run:ios",
+    "start-tunnel": "node ./node_modules/expo/bin/cli start --dev-client --tunnel",
+    "start-go": "node ./node_modules/expo/bin/cli start",
+    "build:dev:ios": "node ./node_modules/eas-cli/bin/run build --profile development --platform ios",
+    "build:dev:android": "node ./node_modules/eas-cli/bin/run build --profile development --platform android"
   },
   "dependencies": {
     "@nkzw/create-context-hook": "^1.1.0",
@@ -47,7 +47,8 @@
     "@types/react": "~19.1.10",
     "eslint": "^9.31.0",
     "eslint-config-expo": "~10.0.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "eas-cli": "^16.26.0"
   },
   "private": true
 }
