--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install dependencies (no lock file)
+        run: npm install
+      
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
