--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies (no lock file)
-        run: npm install
+        run: npm install --legacy-peer-deps
       
       - name: Setup Node
         uses: actions/setup-node@v4
