--- a/app.json
+++ b/app.json
@@ -32,6 +32,12 @@
     },
     "plugins": [
       [
+        "expo-dev-client",
+        {
+          "launchMode": "most-recent"
+        }
+      ],
+      [
         "expo-router",
         {
           "origin": "https://rork.com/"
