--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -43,11 +43,10 @@ jobs:
           find . -maxdepth 2 -name "*.xcworkspace" -print -exec ls -lah {} \; || true
           find . -maxdepth 2 -name "contents.xcworkspacedata" -print || true
 
-      - name: Resolve Xcode scheme + workspace/project (robust)
+      - name: Resolve Xcode file + testable scheme (robust)
         run: |
           set -euo pipefail
 
-          # Prefer a valid workspace (must contain contents.xcworkspacedata)
           WORKSPACE="$(find ios -maxdepth 1 -name "*.xcworkspace" -type d -print | head -n 1 || true)"
           if [ -n "${WORKSPACE}" ] && [ -f "${WORKSPACE}/contents.xcworkspacedata" ]; then
             FILETYPE="workspace"
@@ -58,7 +57,7 @@ jobs:
               xcodebuild -list -workspace "$XCODE_FILE" || true
               exit 1
             fi
-            SCHEME="$(echo "$JSON" | ruby -e 'require "json"; puts JSON.parse(STDIN.read)["workspace"]["schemes"][0]')"
+            SCHEMES="$(echo "$JSON" | ruby -e 'require "json"; (JSON.parse(STDIN.read).dig("workspace","schemes") || []).each { |s| puts s }')"
           else
             FILETYPE="project"
             XCODE_FILE="$(find ios -maxdepth 1 -name "*.xcodeproj" -type d -print | head -n 1)"
@@ -68,28 +67,69 @@ jobs:
               xcodebuild -list -project "$XCODE_FILE" || true
               exit 1
             fi
-            SCHEME="$(echo "$JSON" | ruby -e 'require "json"; puts JSON.parse(STDIN.read)["project"]["targets"][0]')"
+            SCHEMES="$(echo "$JSON" | ruby -e 'require "json"; (JSON.parse(STDIN.read).dig("project","schemes") || []).each { |s| puts s }')"
+          fi
+
+          if [ -z "$SCHEMES" ]; then
+            echo "No Xcode schemes found for $FILETYPE: $XCODE_FILE"
+            exit 1
+          fi
+
+          BUILD_SCHEME=""
+          TEST_SCHEME=""
+
+          while IFS= read -r scheme; do
+            [ -z "$scheme" ] && continue
+
+            if [ -z "$BUILD_SCHEME" ]; then
+              BUILD_SCHEME="$scheme"
+            fi
+
+            if xcodebuild -showTestPlans -"$FILETYPE" "$XCODE_FILE" -scheme "$scheme" >/dev/null 2>&1; then
+              TEST_SCHEME="$scheme"
+              break
+            fi
+          done <<< "$SCHEMES"
+
+          if [ -n "$TEST_SCHEME" ]; then
+            CAN_RUN_TESTS="true"
+            SELECTED_SCHEME="$TEST_SCHEME"
+          else
+            CAN_RUN_TESTS="false"
+            SELECTED_SCHEME="$BUILD_SCHEME"
+            echo "No test-configured scheme found. Will build only with scheme: $SELECTED_SCHEME"
           fi
 
           echo "FILETYPE=$FILETYPE" >> "$GITHUB_ENV"
           echo "XCODE_FILE=$XCODE_FILE" >> "$GITHUB_ENV"
-          echo "SCHEME=$SCHEME" >> "$GITHUB_ENV"
+          echo "SCHEME=$SELECTED_SCHEME" >> "$GITHUB_ENV"
+          echo "CAN_RUN_TESTS=$CAN_RUN_TESTS" >> "$GITHUB_ENV"
 
           echo "Using $FILETYPE: $XCODE_FILE"
-          echo "Using scheme: $SCHEME"
+          echo "Using scheme: $SELECTED_SCHEME"
+          echo "Can run tests: $CAN_RUN_TESTS"
 
-      - name: Build (for testing) on iPhone Simulator
+      - name: Build on iPhone Simulator
         run: |
           set -euo pipefail
           device="$(xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//")"
 
-          xcodebuild build-for-testing \
-            -scheme "$SCHEME" \
-            -"$FILETYPE" "$XCODE_FILE" \
-            -destination "platform=iOS Simulator,name=$device" \
-            CODE_SIGNING_ALLOWED=NO
+          if [ "$CAN_RUN_TESTS" = "true" ]; then
+            xcodebuild build-for-testing \
+              -scheme "$SCHEME" \
+              -"$FILETYPE" "$XCODE_FILE" \
+              -destination "platform=iOS Simulator,name=$device" \
+              CODE_SIGNING_ALLOWED=NO
+          else
+            xcodebuild build \
+              -scheme "$SCHEME" \
+              -"$FILETYPE" "$XCODE_FILE" \
+              -destination "platform=iOS Simulator,name=$device" \
+              CODE_SIGNING_ALLOWED=NO
+          fi
 
       - name: Test (without building) on iPhone Simulator
+        if: env.CAN_RUN_TESTS == 'true'
         run: |
           set -euo pipefail
           device="$(xcrun xctrace list devices 2>&1 | grep -oE 'iPhone.*?[^\(]+' | head -1 | awk '{$1=$1;print}' | sed -e "s/ Simulator$//")"
