--- a/app.json
+++ b/app.json
@@ -56,6 +56,7 @@
       "expo-location",
       "expo-calendar",
       "expo-contacts",
+      "expo-audio",
       "expo-speech-recognition"
     ],
     "experiments": {
