--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "ios": "expo run:ios",
     "start-tunnel": "expo start --dev-client --tunnel",
     "start-go": "expo start",
-    "build:dev:ios": "eas build --profile development --platform ios",
-    "build:dev:android": "eas build --profile development --platform android",
+    "build:dev:ios": "npx eas build --profile development --platform ios",
+    "build:dev:android": "npx eas build --profile development --platform android",
     "test": "jest"
   },
   "dependencies": {
@@ -58,9 +58,8 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/ngrok": "^4.1.0",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "^29.5.14",
     "@types/react": "~19.1.10",
-    "eas-cli": "^16.26.0",
     "eslint": "^9.31.0",
     "eslint-config-expo": "~10.0.0",
     "jest": "^29.7.0",
