--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "start-go": "expo start",
     "build:dev:ios": "npx eas build --profile development --platform ios",
     "build:dev:android": "npx eas build --profile development --platform android",
-    "test": "jest"
+    "test": "jest",
+    "build:prod:ios:local": "env NPM_CONFIG_CACHE=.npm-cache npx eas build --profile production --platform ios --local",
+    "build:prod:ios:local:clean": "rm -rf .npm-cache && env NPM_CONFIG_CACHE=.npm-cache npx eas build --profile production --platform ios --local"
   },
   "dependencies": {
     "@nkzw/create-context-hook": "^1.1.0",
