Improve local iOS build repair flow for fastlane and npm cache

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "build:dev:ios": "npx eas build --profile development --platform ios",
     "build:dev:android": "npx eas build --profile development --platform android",
     "test": "jest",
-    "build:prod:ios:local": "env NPM_CONFIG_CACHE=.npm-cache npx eas build --profile production --platform ios --local",
-    "build:prod:ios:local:clean": "rm -rf .npm-cache && env NPM_CONFIG_CACHE=.npm-cache npx eas build --profile production --platform ios --local",
-    "build:prod:ios:local:repair": "rm -rf .npm-cache ~/.npm/_cacache && env NPM_CONFIG_CACHE=.npm-cache npx eas build --profile production --platform ios --local"
+    "build:prod:ios:local": "./scripts/check-ios-local-build-env.sh && env NPM_CONFIG_CACHE=.npm-cache npx eas build --profile production --platform ios --local",
+    "build:prod:ios:local:clean": "rm -rf .npm-cache && ./scripts/check-ios-local-build-env.sh && env NPM_CONFIG_CACHE=.npm-cache npx eas build --profile production --platform ios --local",
+    "build:prod:ios:local:repair": "rm -rf .npm-cache && npm cache verify --cache .npm-cache && ./scripts/check-ios-local-build-env.sh && env NPM_CONFIG_CACHE=.npm-cache npx eas build --profile production --platform ios --local"
   },
   "dependencies": {
     "@nkzw/create-context-hook": "^1.1.0",
