--- a/package.json
+++ b/package.json
@@ -70,5 +70,6 @@
     "react-test-renderer": "^19.1.0",
     "typescript": "~5.9.2"
   },
-  "private": true
+  "private": true,
+  "packageManager": "npm@10.8.2"
 }
