--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@tanstack/react-query": "^5.83.0",
     "expo": "~54.0.27",
     "expo-application": "^7.0.8",
+    "expo-asset": "^12.0.12",
     "expo-audio": "^1.1.1",
     "expo-av": "~16.0.8",
+    "expo-blur": "^15.0.8",
     "expo-calendar": "^15.0.8",
     "expo-clipboard": "^8.0.8",
+    "expo-constants": "^18.0.13",
     "expo-contacts": "^15.0.11",
     "expo-dev-client": "~6.0.20",
     "expo-device": "^8.0.10",
@@ -36,7 +39,7 @@
     "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.10",
     "expo-local-authentication": "^17.0.8",
-    "expo-location": "^19.0.8",
+    "expo-location": "19.0.8",
     "expo-network": "^8.0.8",
     "expo-router": "~6.0.17",
     "expo-secure-store": "^15.0.8",
@@ -46,12 +49,13 @@
     "expo-sqlite": "^16.0.10",
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
+    "expo-web-browser": "^15.0.10",
     "lucide-react-native": "^0.575.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-maps": "^1.27.1",
+    "react-native-maps": "^1.20.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
@@ -71,5 +75,8 @@
     "typescript": "~5.9.2"
   },
   "private": true,
-  "packageManager": "npm@10.8.2"
+  "packageManager": "npm@10.8.2",
+  "overrides": {
+    "expo-location": "19.0.8"
+  }
 }
