--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "test": "jest",
     "build:prod:ios:local": "./scripts/check-ios-local-build-env.sh && env NPM_CONFIG_CACHE=.npm-cache npx eas build --profile production --platform ios --local",
     "build:prod:ios:local:clean": "rm -rf .npm-cache && ./scripts/check-ios-local-build-env.sh && env NPM_CONFIG_CACHE=.npm-cache npx eas build --profile production --platform ios --local",
-    "build:prod:ios:local:repair": "rm -rf .npm-cache && npm cache verify --cache .npm-cache && ./scripts/check-ios-local-build-env.sh && env NPM_CONFIG_CACHE=.npm-cache npx eas build --profile production --platform ios --local"
+    "build:prod:ios:local:repair": "rm -rf .npm-cache && npm cache verify --cache .npm-cache && ./scripts/check-ios-local-build-env.sh && env NPM_CONFIG_CACHE=.npm-cache npx eas build --profile production --platform ios --local",
+    "check:ios:credentials": "node ./scripts/validate-ios-local-credentials.mjs"
   },
   "dependencies": {
     "@nkzw/create-context-hook": "^1.1.0",
