--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "check:ios:credentials": "node ./scripts/validate-ios-local-credentials.mjs"
   },
   "dependencies": {
+    "@naveen521kk/expo-hf-tokenizers": "^0.1.0",
     "@nkzw/create-context-hook": "^1.1.0",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@rork-ai/toolkit-sdk": "^0.2.51",
@@ -32,6 +33,7 @@
     "expo-clipboard": "^8.0.8",
     "expo-constants": "^18.0.13",
     "expo-contacts": "^15.0.11",
+    "expo-coreml-llm": "file:modules/expo-coreml-llm",
     "expo-dev-client": "~6.0.20",
     "expo-device": "^8.0.10",
     "expo-haptics": "~15.0.8",
