--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "expo-status-bar": "~3.0.9",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "^15.0.10",
+    "js-sha256": "^0.11.1",
     "lucide-react-native": "^0.575.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
