--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build:prod:ios:local": "./scripts/check-ios-local-build-env.sh && env NPM_CONFIG_CACHE=.npm-cache npx eas build --profile production --platform ios --local",
     "build:prod:ios:local:clean": "rm -rf .npm-cache && ./scripts/check-ios-local-build-env.sh && env NPM_CONFIG_CACHE=.npm-cache npx eas build --profile production --platform ios --local",
     "build:prod:ios:local:repair": "rm -rf .npm-cache && npm cache verify --cache .npm-cache && ./scripts/check-ios-local-build-env.sh && env NPM_CONFIG_CACHE=.npm-cache npx eas build --profile production --platform ios --local",
-    "check:ios:credentials": "node ./scripts/validate-ios-local-credentials.mjs"
+    "check:ios:credentials": "node ./scripts/validate-ios-local-credentials.mjs",
+    "eas-build-pre-install": "node ./scripts/ensure-package-lock-for-eas.mjs"
   },
   "dependencies": {
     "@naveen521kk/expo-hf-tokenizers": "^0.1.0",
