--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -30,6 +30,9 @@ jobs:
           node -v
           npm -v
 
+      - name: Validate local iOS credentials script parity
+        run: node ./scripts/validate-ios-local-credentials.mjs
+
       - name: Expo prebuild (iOS)
         run: npx expo prebuild --platform ios --non-interactive --no-install
 
