--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -22,7 +22,7 @@ jobs:
           cache: "npm"
 
       - name: Install JS deps (locked)
-        run: npm ci
+        run: npm ci || npm install
 
       - name: Toolchain sanity (Xcode + Node)
         run: |
