Fix iOS EAS pod install instability and lockfile conflicts

--- a/app.json
+++ b/app.json
@@ -50,7 +50,15 @@
       "expo-calendar",
       "expo-contacts",
       "expo-audio",
-      "expo-speech-recognition"
+      "expo-speech-recognition",
+      [
+        "expo-build-properties",
+        {
+          "ios": {
+            "privacyManifestAggregationEnabled": false
+          }
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
