--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "expo-audio": "^1.1.1",
     "expo-av": "~16.0.8",
     "expo-blur": "^15.0.8",
+    "expo-build-properties": "~1.0.9",
     "expo-calendar": "^15.0.8",
     "expo-clipboard": "^8.0.8",
     "expo-constants": "^18.0.13",
