fix(ios): scope js engine config and sync podfile settings

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "eas-build-pre-install": "node ./scripts/ensure-package-lock-for-eas.mjs",
     "build:prod:local:repair": "npm run build:prod:ios:local:repair",
     "android": "expo run:android",
-    "ios:prebuild:doctor": "./scripts/ios/prebuild_with_pod_doctor.sh"
+    "ios:prebuild:doctor": "./scripts/ios/prebuild_with_pod_doctor.sh",
+    "sync:ios-runtime-config": "node ./scripts/sync-ios-runtime-config.mjs"
   },
   "dependencies": {
     "@naveen521kk/expo-hf-tokenizers": "^0.1.0",
