Add CoreML model manifest and scripts for EAS build monitoring
- Created a new manifest file for the Dolphin3.0-Llama3.2-3B-int4-lut CoreML model.
- Added `watch-eas-build-no-kill.sh` script to monitor EAS build process without terminating it.
- Introduced `watch-eas-build.sh` script to watch for the temporary EAS build directory and log relevant files.

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ scripts/ios/*.mobileprovision
 
 # Apple Developer auth config (API keys, saved settings)
 .apple-auth/
+.npm-cache/
+NJKFHRBSH2.cer
+*.log
