--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@react-native-async-storage/async-storage": "2.2.0",
     "@rork-ai/toolkit-sdk": "^0.2.51",
     "@tanstack/react-query": "^5.83.0",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~54.0.27",
     "expo-application": "^7.0.8",
     "expo-asset": "^12.0.12",
