--- a/modules/expo-coreml-llm/expo-module.config.json
+++ b/modules/expo-coreml-llm/expo-module.config.json
@@ -1,6 +1,7 @@
 {
   "platforms": ["ios"],
   "apple": {
-    "modules": ["ExpoCoreMLLLMModule"]
+    "modules": ["ExpoCoreMLLLMModule"],
+    "podspecPath": "expo-coreml-llm.podspec"
   }
 }
