Deepen CoreML pipeline with coremltools IO inspection

--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "build:prod:local:repair": "npm run build:prod:ios:local:repair",
     "android": "expo run:android",
     "ios:prebuild:doctor": "./scripts/ios/prebuild_with_pod_doctor.sh",
-    "sync:ios-runtime-config": "node ./scripts/sync-ios-runtime-config.mjs"
+    "sync:ios-runtime-config": "node ./scripts/sync-ios-runtime-config.mjs",
+    "coreml:validate": "node ./scripts/coreml/validate_coreml_pipeline.mjs",
+    "coreml:fetch": "./scripts/coreml/fetch_dolphin_coreml_and_tokenizer.sh",
+    "coreml:inspect": "node ./scripts/coreml/run_coreml_inspect.mjs"
   },
   "dependencies": {
     "@naveen521kk/expo-hf-tokenizers": "^0.1.0",
